ui: fix clipping in `<ArtifactOverview>`

--- a/ui/app/styles/components/navigation/artifact-overview.scss
+++ b/ui/app/styles/components/navigation/artifact-overview.scss
@@ -31,7 +31,6 @@
       vertical-align: top;
 
       > * {
-        overflow: hidden;
         white-space: nowrap;
       }
     }
